Added viewmodel with data type and default data annotations validations

--- a/UnobtrusiveMVCTechniques/UnobtrusiveMVCTechniques.csproj
+++ b/UnobtrusiveMVCTechniques/UnobtrusiveMVCTechniques.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
