--- a/UnobtrusiveMVCTechniques/packages.config
+++ b/UnobtrusiveMVCTechniques/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DataAnnotationsExtensions" version="1.0.2.0" />
+  <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
   <package id="jQuery" version="1.5.1" />
   <package id="jQuery.Validation" version="1.8.0" />
   <package id="jQuery.vsdoc" version="1.5.1" />
+  <package id="WebActivator" version="1.2.0.0" />
 </packages>
