Set up static home page with links to experiments

--- a/UnobtrusiveMVCTechniques/UnobtrusiveMVCTechniques.csproj
+++ b/UnobtrusiveMVCTechniques/UnobtrusiveMVCTechniques.csproj
@@ -110,10 +110,13 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ValidationExample.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CustomValidation\ValidationTest.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
