--- a/UnobtrusiveMVCTechniques/packages.config
+++ b/UnobtrusiveMVCTechniques/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="2.6.1.841" />
+  <package id="Autofac.Mvc3" version="2.6.1.841" />
   <package id="DataAnnotationsExtensions" version="1.0.2.0" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
   <package id="jQuery" version="1.5.1" />
