--- a/UnobtrusiveMVCTechniques/packages.config
+++ b/UnobtrusiveMVCTechniques/packages.config
@@ -4,8 +4,8 @@
   <package id="Autofac.Mvc3" version="2.6.1.841" />
   <package id="DataAnnotationsExtensions" version="1.0.2.0" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.0.2.0" />
-  <package id="FluentValidation" version="3.3.1.0" />
-  <package id="FluentValidation.MVC3" version="3.3.1.0" />
+  <package id="FluentValidation" version="3.4.6.0" targetFramework="net40" />
+  <package id="FluentValidation.MVC3" version="3.4.6.0" targetFramework="net40" />
   <package id="jQuery" version="1.5.1" />
   <package id="jQuery.Validation" version="1.8.0" />
   <package id="jQuery.vsdoc" version="1.5.1" />
